--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,33 @@
+stages:
+  - package
+check:
+  stage: .pre
+  script:
+    - ls -al
+clean:
+  stage: .post
+  script:
+    - rm -rf *
 build:
+  stage: build
   script:
     - echo "build"
 test:
+  stage: test
   script:
     - echo "test"
 
 package:
+  stage: package
   script:
     - echo "test"
 
 build image:
+  stage: package
   script:
     - echo "test"
 
 deploy:
+  stage: deploy
   script:
     - echo "test"
