--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,4 @@
-stages:
-  - package
+
 check:
   stage: .pre
   script:
@@ -18,12 +17,12 @@ test:
     - echo "test"
 
 package:
-  stage: package
+  stage: build
   script:
     - echo "test"
 
 build image:
-  stage: package
+  stage: build
   script:
     - echo "test"
 
