--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@ stages:
 build:
   stage: build
   script:
-    - echo "build"
+    - npm install
+    - npm run build
 test:
   stage: test
   script:
