--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,4 +51,4 @@ deploy:
     - chmod 400 $PROD_SERVER_SSH_KEY
   script:
     - |
-        ssh -o StrickHostKeyCheking=no -i $PROD_SERVER_SSH_KEY -p $PROD_SERVER_SSH_PORT $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS "mkdir -p $PROJECT_LOCATION/$PROJECT_NAME"
+        ssh -o StrictHostKeyCheking=no -i $PROD_SERVER_SSH_KEY -p $PROD_SERVER_SSH_PORT $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS "mkdir -p $PROJECT_LOCATION/$PROJECT_NAME"
