--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ deploy:
     - | 
         ssh -o StrictHostKeyChecking=no -i $PROD_SERVER_SSH_KEY -p $PROD_SERVER_SSH_PORT $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS 
         "
-        docker network inspect $PROJECT_NETWORK > /dev/null 2&1 || docker network create $PROJECT_NETWORK 
+        docker network inspect $PROJECT_NETWORK > /dev/null 2>&1 || docker network create $PROJECT_NETWORK 
         && 
         docker compose -f $PROJECT_LOCATION/$PROJECT_NAME/compose.yml down 
         && 
