Gestion des rules

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,8 +16,8 @@ debug:
   stage: .pre
   script:
     - env
-  except:
-    - main
+  rules:
+    - if: $DEBUG
 
 build:
   stage: build
@@ -62,3 +62,5 @@ deploy:
     - scp -o StrictHostKeyChecking=no -i $PROD_SERVER_SSH_KEY -P $PROD_SERVER_SSH_PORT compose.yml $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS:$PROJECT_LOCATION/$PROJECT_NAME/compose.yml
     - ssh -o StrictHostKeyChecking=no -i $PROD_SERVER_SSH_KEY -p $PROD_SERVER_SSH_PORT $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS "docker network inspect $PROJECT_NETWORK > /dev/null 2>&1 || docker network create $PROJECT_NETWORK"
     - ssh -o StrictHostKeyChecking=no -i $PROD_SERVER_SSH_KEY -p $PROD_SERVER_SSH_PORT $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS "docker compose -f $PROJECT_LOCATION/$PROJECT_NAME/compose.yml down && docker compose -f $PROJECT_LOCATION/$PROJECT_NAME/compose.yml up -d"
+  rules:
+    - if: $ENVIRONMENT
