--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ debug:
   script:
     - env
   rules:
-    - if: "$DEBUG == true"
+    - if: "$DEBUG == 'true'"
       when: on_success
     - when: never
 
