--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,13 +56,13 @@ build image:
   after_script:
     - docker images
 
-.setup-ssh:
+.setup-ssh: &ssh
   before_script:
     -  chmod 400 $PROD_SERVER_SSH_KEY
   
 deploy dev:
   stage: deploy
-  extends: .setup-ssh
+  <<: *ssh
   script:
     - ssh -o StrictHostKeyChecking=no -i $PROD_SERVER_SSH_KEY -p $PROD_SERVER_SSH_PORT $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS "mkdir -p $PROJECT_LOCATION/$PROJECT_NAME"
     - scp -o StrictHostKeyChecking=no -i $PROD_SERVER_SSH_KEY -P $PROD_SERVER_SSH_PORT compose.yml $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS:$PROJECT_LOCATION/$PROJECT_NAME/compose.yml
@@ -75,7 +75,7 @@ deploy dev:
 
 deploy prod:
   stage: deploy
-  extends: .setup-ssh
+  <<: *ssh
   script:
     - ssh -o StrictHostKeyChecking=no -i $PROD_SERVER_SSH_KEY -p $PROD_SERVER_SSH_PORT $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS "mkdir -p $PROJECT_LOCATION/$PROJECT_NAME"
     - scp -o StrictHostKeyChecking=no -i $PROD_SERVER_SSH_KEY -P $PROD_SERVER_SSH_PORT compose.yml $PROD_SERVER_USERNAME@$PROD_SERVER_ADDRESS:$PROJECT_LOCATION/$PROJECT_NAME/compose.yml
