--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,13 @@
-image: node:20
-variables:
-  PROJECT_LOCATION: /opt/applications/ams-imc
-  PROJECT_GROUP: simachille
-  PROJECT_NETWORK: imc-network
-  PROJECT_NAME: front-imc
-  PROJECT_VERSION: latest
-  ENVIRONMENT: prod
-
-stages:
- - build
- - test
- - package 
- - deploy
-
+include:
+  - project: bootcamp-devops/pipelines/shared
+    file:
+      - jobs/.variables.yml
 debug:
   stage: .pre
   script:
     - env
   rules:
-    - if: "$DEBUG == 'true'"
+    - if: '$CI_COMMIT_BRANCH == "develop"'
       when: on_success
     - when: never
 
