--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,3 +8,4 @@ variables:
   PROJECT_NAME: front-imc
   PROJECT_DESTINATION: localhost
   PROJECT_DESTINATION_PORT: 81
+  PROJECT_URL: https://ams.imc.chillo.fr
