--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,5 +9,5 @@ variables:
   PROJECT_NAME: front-imc
   PROJECT_DESTINATION: localhost
   PROJECT_DESTINATION_PORT: 81
-  ENVIRONMENT: prod
+  ENVIRONMENT: "prod"
 
