Deployer le projet avec un template

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
-
 include:
   - project: pipelines/integration
     file:
       - jobs/.run.yml
 variables:
-  TYPE: front
+  PROJECT_TYPE: front
+  PROJECT_NAME: front-imc
+  PROJECT_URL: ams.imc.chillo.fr 
