Calculate next version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,32 @@ build:
   artifacts:
     paths:
       - dist
-    
+variables:
+  VERSION_TYPE: 'patch'
 
 package:
   stage: package
   script:
     - CURRENT_VERSION=$(grep version package.json | sed -n 's|.*"version".*:.*"\(.*\)".*|\1|p')
     - echo $CURRENT_VERSION
+    - |
+        MAJOR=$(echo $CURRENT_VERSION | cut -d. -f1)
+        MINOR=$(echo $CURRENT_VERSION | cut -d. -f2)
+        PATCH=$(echo $CURRENT_VERSION | cut -d. -f3)
+    - |
+        if [ VERSION_TYPE == 'major' ];
+        then
+          NEXT_VERSION=$((MAJOR+1)).0.0
+        fi
+        if [ VERSION_TYPE == 'minor' ];
+        then
+          NEXT_VERSION=$MAJOR.$((MINOR+1)).0
+        fi
+        if [ VERSION_TYPE == 'patch' ];
+        then
+          NEXT_VERSION=$MAJOR.$MINOR.$((PATCH+1))
+        fi
+    - echo $CURRENT_VERSION 
+    - echo $NEXT_VERSION
   needs:
     - build
