--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,9 @@ sonar.projectName=front-imc
 sonar.sources=src
 sonar.tests=src
 sonar.inclusions=**/*.test.js,**/*.spec.test.js
-sonar.inclusions=**/*.test.js
+sonar.exclusions=**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.javascript.file.suffixes=.jsx,.js
-sonar.lang.patterns.js=**/*.js
+sonar.language=js
+sonar.lang.patterns.js=**/*.js,**/*.jsx
 sonar.souceEncoding=UTF-8
