--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectName=front-imc
 sonar.sources=src
 sonar.tests=src
-sonar.inclusions=**/*.test.js,**/*.spec.test.js
+sonar.inclusions=**/*.test.jsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.javascript.file.suffixes=.jsx,.js
 sonar.language=js
