Couverture de code

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
 sonar.projectName=front-imc
 sonar.sources=src
 sonar.tests=src
+sonar.test.inclusions=**/*.test.jsx
+sonar.exclusions=**/*.test.jsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
