Couverture de code

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,6 @@
 sonar.projectName=front-imc
 sonar.sources=src
 sonar.tests=src
-sonar.inclusions=**/*.test.js,**/*.spec.test.js
-sonar.inclusions=**/*.test.js
+sonar.test.inclusions=**/*.test.jsx
+sonar.exclusions=**/*.test.jsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.javascript.file.suffixes=.jsx,.js
-sonar.souceEncoding=UTF-8
