--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,5 @@ sonar.tests=src
 sonar.test.inclusions=**/*.test.jsx
 sonar.exclusions=**/*.test.jsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.file.suffixes=.jsx,.js
+sonar.souceEncoding=UTF-8
