--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
-include:
-  - project: pipelines/integration
-    file:
-      - jobs/.run.yml
-
 variables:
+  PROJECT_TYPE: front
   PROJECT_NAME: front-imc
   PROJECT_URL: ams.imc.chillo.fr 
+
+include:
+  - project: bootcamp-devops7241002/pipelines/integration
+    file:
+      - jobs/.run.yml
