lister le contenu du repertoire

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,5 @@
-variables:
-  PROJECT_TYPE: front
-  PROJECT_NAME: front-imc
-  PROJECT_URL: ams.imc.chillo.fr 
-
-include:
-  - project: bootcamp-devops7241002/pipelines/integration
-    file:
-      - jobs/.run.yml
+check:
+  script:
+    -pwd
+    -ls -la
+    
