--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,21 @@
-check:
+build:
   script:
-    -pwd
-    -ls -la
+    -echo "build"
+    
+test:
+  script:
+    -echo "test"
+
+package:
+  script:
+    -echo "test"
+    
+build image:
+  script:
+    -echo "test"
+
+deploy:
+  script:
+    -echo "test"
+    
     
