--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,37 +10,81 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: node:21
+      image: node:20
     
     steps:
     - uses: actions/checkout@v3
-    - run: npm install
-    - run: npm run build
     
+    - name: Install dependencies
+      run: npm install
+    
+    - name: Build application
+      run: npm run build
+    
+    - name: Upload node_modules
+      uses: actions/upload-artifact@v3
+      with:
+        name: node-modules
+        path: node_modules/
+    
+    - name: Upload dist
+      uses: actions/upload-artifact@v3
+      with:
+        name: dist
+        path: dist/
+
   test:
     runs-on: ubuntu-latest
-    needs: build
+    container:
+      image: node:20
+    needs: build  # Attend que build soit terminé
+    
     steps:
     - uses: actions/checkout@v3
-    - run: ls -la
+    
+    - name: Download node_modules
+      uses: actions/download-artifact@v3
+      with:
+        name: node-modules
+        path: node_modules/
+    
+    - name: Run tests
+      run: ls -la
 
   package:
     runs-on: ubuntu-latest
-    needs: test
+    container:
+      image: node:20
+    needs: test  # Attend que test soit terminé
+    
     steps:
     - uses: actions/checkout@v3
-    - run: ls -la
     
+    - name: Download dependencies
+      uses: actions/download-artifact@v3
+      with:
+        name: node-modules
+        path: node_modules/
+    
+    - name: Package application
+      run: ls -la
+
   build-image:
     runs-on: ubuntu-latest
-    needs: package
+    container:
+      image: node:20
+    needs: package  # Attend que package soit terminé
+    
     steps:
     - uses: actions/checkout@v3
     - run: ls -la
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-image
+    container:
+      image: node:20
+    needs: build-image  # Attend que build-image soit terminé
+    
     steps:
     - uses: actions/checkout@v3
     - run: ls -la
