--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
     
     - name: Package application
       run: ls -la
-
+  
   build-image:
     runs-on: ubuntu-latest
     needs: package
@@ -77,18 +77,24 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Build Docker image
-      run: docker build -t moladevops/front-imc:${{ github.sha }} .
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     
-    - name: List Docker images
-      run: docker images
+    - name: Build and push
+      run: |
+        docker build -t moladevops/front-imc:${{ github.sha }} .
+        docker push moladevops/front-imc:${{ github.sha }}
+        docker tag moladevops/front-imc:${{ github.sha }} moladevops/front-imc:latest
+        docker push moladevops/front-imc:latest
 
   deploy:
     runs-on: ubuntu-latest
-    container:
-      image: node:20
     needs: build-image
     
     steps:
     - uses: actions/checkout@v4
-    - run: ls -la
+    - name: Deploy info
+      run: echo "Image moladevops/front-imc:${{ github.sha }} pushed to Docker Hub"
