--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,10 @@
 name: CI Pipeline
-# Force update: 2025-10-04
+
+env:
+  PROJECT_GROUP: moladevopsgroup
+  PROJECT_NAME: front-imc
+  PROJECT_VERSION: latest
+  DOCKER_USERNAME: moladevops237
 
 on:
   push:
@@ -85,10 +90,10 @@ jobs:
     
     - name: Build and push
       run: |
-        docker build -t moladevops237/front-imc:${{ github.sha }} .
-        docker push moladevops237/front-imc:${{ github.sha }}
-        docker tag moladevops237/front-imc:${{ github.sha }} moladevops237/front-imc:latest
-        docker push moladevops237/front-imc:latest
+        docker build -t ${{ env.DOCKER_USERNAME }}/${{ env.PROJECT_NAME }}:${{ github.sha }} .
+        docker push ${{ env.DOCKER_USERNAME }}/${{ env.PROJECT_NAME }}:${{ github.sha }}
+        docker tag ${{ env.DOCKER_USERNAME }}/${{ env.PROJECT_NAME }}:${{ github.sha }} ${{ env.DOCKER_USERNAME }}/${{ env.PROJECT_NAME }}:${{ env.PROJECT_VERSION }}
+        docker push ${{ env.DOCKER_USERNAME }}/${{ env.PROJECT_NAME }}:${{ env.PROJECT_VERSION }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -97,4 +102,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Deploy info
-      run: echo "Image moladevops237/front-imc:${{ github.sha }} pushed to Docker Hub"
+      run: |
+        echo "Project: ${{ env.PROJECT_GROUP }}/${{ env.PROJECT_NAME }}"
+        echo "Version: ${{ env.PROJECT_VERSION }}"
+        echo "Image: ${{ env.DOCKER_USERNAME }}/${{ env.PROJECT_NAME }}:${{ github.sha }}"
